# ssne_ai_demo

./: CMakeLists.txt  README.md  README.txt  demo_face.cpp
app_assets/: char_A.ssbmp  char_A_colorLUT.sscl  char_B.ssbmp  char_B_colorLUT.sscl  char_K.ssbmp  char_O.ssbmp  char_Q.ssbmp  char_R.ssbmp  chars_colorLUT.sscl  qr_ok_test.ssbmp  qr_ok_test_colorLUT.sscl  shared_colorLUT.sscl
app_assets/chars/: char_0.ssbmp  char_1.ssbmp  char_2.ssbmp  char_3.ssbmp  char_4.ssbmp  char_5.ssbmp  char_6.ssbmp  char_7.ssbmp  char_8.ssbmp  char_9.ssbmp  char_A.ssbmp  char_B.ssbmp  char_C.ssbmp  char_D.ssbmp  char_E.ssbmp  char_F.ssbmp  char_G.ssbmp  char_H.ssbmp  char_I.ssbmp  char_J.ssbmp  char_K.ssbmp  char_L.ssbmp  char_M.ssbmp  char_N.ssbmp  char_O.ssbmp  char_P.ssbmp  char_Q.ssbmp  char_R.ssbmp  char_S.ssbmp  char_T.ssbmp  char_U.ssbmp  char_V.ssbmp  char_W.ssbmp  char_X.ssbmp  char_Y.ssbmp  char_Z.ssbmp  char_colon.ssbmp  char_dash.ssbmp  char_dot.ssbmp  char_slash.ssbmp  (+2 more)
cmake_config/: Paths.cmake
include/: jq8400_uart.hpp  osd-device.hpp  qr_decoder.hpp  utils.hpp
scripts/: run.sh
src/: jq8400_uart.cpp  osd-device.cpp  qr_decoder.cpp  utils.cpp
